@@ -17,7 +17,13 @@ lazy val root = (project in file(".")).
       "-Wunused", // for scalafix
     ),
     Compile / run / fork := true, // cleaner to run programs in a JVM different from sbt
-    run / javaOptions += "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED", // needed to run Spark with Java 17
+    // needed to run Spark with Java 17
+    run / javaOptions ++= Seq(
+      "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
+      "--add-opens=java.base/java.util=ALL-UNNAMED",
+      "--add-opens=java.base/java.lang=ALL-UNNAMED",
+      "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED"
+    ),
     libraryDependencies ++= Dependencies.core ++ Dependencies.scalaTest,
     dependencyOverrides += "com.fasterxml.jackson.core" % "jackson-databind" % "2.14.2",
     Compile / mainClass := Some("org.cscie88c.week9.BeamDemoWordCount"),
